objects/Vindicator__mdt.object
<CustomObject>
    <fields>
        <fullName>DRDTTYPE__c</fullName>
        <label>DRDTTYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRDTTYPE_01</fullName>
                    <default>true</default>
                    <label>DRDTTYPE_01</label>
                </value>
                <value>
                    <fullName>DRDTTYPE_02</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_03</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_04</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_05</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_06</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_07</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_08</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_09</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_10</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_11</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                    <default>true</default>
                    <label>Input</label>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vindicator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>DRDTTYPE__c</columns>
        <columns>Order__c</columns>
        <columns>Property__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Vindicators</pluralLabel>
</CustomObject>